--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <title>MyBookList</title>
 </head>
+
 <body>
-    
+    <div class="container mt-4">
+        <h1 class="display-4 text-center"> <img src="open-book.png" alt="" style="height: 64px;"> My<span
+                class="text-primary">Book</span>List</h1>
+        <!-- form -->
+        <form id="book-form">
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text" id="title" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="author">Author</label>
+                <input type="text" id="author" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="isbn">ISBN#</label>
+                <input type="text" id="isbn" class="form-control">
+            </div>
+            <br>
+            <div class="d-grid gap-2">
+                <input type="submit" value="Add Book" class="btn btn-lg btn-primary">
+            </div>
+        </form>
+        <!-- table -->
+        <table class="table table-striped mt-5">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>ISBN#</th>
+                    <th></th>
+                </tr>
+                <tbody id="book-list"></tbody>
+            </thead>
+        </table>
+    </div>
+
+    <script src="app.js"></script>
 </body>
+
 </html>
